Bug 76563 - DOCX import: loading hyperlinks is slow
Summary: DOCX import: loading hyperlinks is slow
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-24 17:21 UTC by Miklos Vajna
Modified: 2014-03-25 08:54 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Reproducer document (117.11 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-03-24 17:21 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2014-03-24 17:21:03 UTC
Created attachment 96301 [details]
Reproducer document

We're going through the list of hyperlinks each time a hyperlink is referenced that causes the slowness. Adding an std::map and reading the hyperlink list one would cause a major speedup for this document.
Comment 1 Commit Notification 2014-03-25 08:48:31 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f5ae42f9344a523e586fdcca4f0e670ee2a4d821

fdo#76563 DOCX import: speed up importing lots of hyperlinks



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.